<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="bt_not_enabled_leaving">User declined to enable Bluetooth, exiting Bluetooth Advertisements.</string>
    <string name="activity_main_title">Nearby Devices</string>
    <string name="broadcast_device">Broadcast Device</string>

    <string name="bt_not_supported">Bluetooth is not supported on this device.</string>
    <string name="bt_ads_not_supported">Bluetooth Advertisements are not supported on this device.</string>

    <string name="refresh">Refresh</string>
    <string name="start_error_prefix">Start Advertising failed: </string>
    <string name="start_error_already_started">already started.</string>
    <string name="start_error_too_large">data packet exceeded 31 Byte limit.</string>
    <string name="start_error_unsupported">not supported on this device.</string>
    <string name="start_error_internal">internal error.</string>
    <string name="start_error_too_many">too many advertisers.</string>
    <string name="bt_null">Error: Bluetooth object null</string>
    <string name="last_seen">Last Seen:</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">minute ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="empty_list">No devices found - refresh to try again.</string>
    <string name="seconds">seconds.</string>
    <string name="scan_start_toast">Scanning for</string>
    <string name="already_scanning">Scanning already started.</string>
    <string name="no_name">(no name)</string>
    <string name="start_error_unknown">unknown error</string>
    <string name="advertising_timedout">Advertising stopped due to timeout.</string>
    <string name="out_text">New Data should appear here</string>
    <string name="send">Invio</string>
    <string name="message_placeholder">Inserire messaggio</string>
    <string name="bt_not_enabled">bluetooth not enabled</string>
    <string name="whoami">Entity</string>
    <string name="isscanning">isScanning?</string>
    <string name="device_name_placeholder">Device name:</string>
    <string name="name">name</string>
    <string name="device_address_placeholder">Address:</string>
    <string name="signal_power_placeholder">Signal power:</string>
    <string name="input_placeholder">Input:</string>
    <string name="output_placeholder">Output:</string>
    <string name="send_test_message">Send test message</string>
    <string name="last_time_placeholder">Last time:</string>
    <string name="startservices">startServices</string>
    <string name="debug_explain">This is a short debugger used to show the user what is going on at low level\n</string>
    <string name="device_id_placeholder">Device Id:</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="destination_id">Destination Id</string>
    <string name="myid">ID</string>
    <string name="client">Client</string>
    <string name="server">Server</string>
    <string name="tweet">Tweet</string>
    <string name="sendEmail">Send email</string>
    <string name="send_message">Send Message</string>
    <string name="tweet_something">Tweet something!</string>
    <string name="compose_email">Compose Email</string>

</resources>