<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">


    <TextView
        android:id="@+id/device_id_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_id_placeholder"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/device_id_placeholder"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/last_time_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_id_placeholder"
        android:text="@string/last_time_placeholder"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/last_time_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_id_placeholder"
        android:layout_toEndOf="@id/last_time_placeholder"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/power_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_time_placeholder"
        android:text="@string/signal_power_placeholder"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/power_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_time_placeholder"
        android:layout_toEndOf="@id/power_placeholder"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/inputText_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/device_id_placeholder"
        android:layout_below="@+id/power_placeholder"
        android:text="@string/input_placeholder"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/device_id_placeholder"
        android:layout_below="@+id/inputText_placeholder"
        android:background="#4b000000"
        android:text="@string/name" />

    <TextView
        android:id="@+id/outputText_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/device_id_placeholder"
        android:layout_below="@+id/inputText"
        android:text="@string/output_placeholder"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/device_id_placeholder"
        android:layout_below="@+id/outputText_placeholder"
        android:background="#4b000000"
        android:text="@string/name" />

    <Button
        android:id="@+id/button_test_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/outputText"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/send_test_message"
        android:textColor="@color/colorPrimaryDark" />


</RelativeLayout>