<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionActivity">

    <TextView
        android:id="@+id/outputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/out_text" />


    <EditText
        android:id="@+id/inputText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/sendButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:hint="@string/message_placeholder"
        android:inputType="text"
        android:textColor="@color/textColorBlack" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/send"
        android:textColor="@color/textColorBlack" />

</RelativeLayout>