<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">


    <TextView
        android:id="@+id/device_id_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_id_placeholder"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/device_id_placeholder"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/name" />
    <!--
        <TextView
            android:id="@+id/last_time_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/device_id_placeholder"
            android:text="@string/last_time_placeholder"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/last_time_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/device_id_placeholder"
            android:layout_toEndOf="@id/last_time_placeholder"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/power_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_time_placeholder"
            android:text="@string/signal_power_placeholder"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/power_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_time_placeholder"
            android:layout_toEndOf="@id/power_placeholder"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/name" />-->

    <TextView
        android:id="@+id/inputText_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_id_placeholder"
        android:layout_alignStart="@id/device_id_placeholder"
        android:text="@string/input_placeholder"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/inputText_placeholder"
        android:layout_alignStart="@+id/device_id_placeholder"
        android:layout_margin="5dp"
        android:background="#4b000000"
        android:scrollbars="vertical"
        android:text="@string/name" />

    <TextView
        android:id="@+id/outputText_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputText"
        android:layout_alignStart="@+id/device_id_placeholder"
        android:text="@string/output_placeholder"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/outputText_placeholder"
        android:layout_alignStart="@+id/device_id_placeholder"
        android:layout_margin="5dp"
        android:background="#4b000000"
        android:scrollbars="vertical"
        android:text="@string/name" />

    <EditText
        android:id="@+id/message_to_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/outputText"
        android:layout_alignStart="@id/device_id_placeholder"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/colorPrimary" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_test_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/message_to_send"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/message_to_send"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/send_message"
        android:textAllCaps="false"
        android:textSize="14sp" />


</RelativeLayout>